main-menu styling, fix collapse menu from filling screen when viewport height < 500px

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -103,7 +103,7 @@ $success: #7952b3;
 
 :where(html), 
 :where(body) {
-  height: 100vh;
+  height: 100svh;
 }
 
 img,
@@ -114,12 +114,12 @@ svg {
 // layout
 
 .app-wrap {
-  background: #e9e9e9;
-  padding: clamp(2rem, 10vw, 6rem);
+  background: var(--bs-gray-700);
+  container: inline-size;
 }
 
 .app {
-  background: #f9f9f9;
+  background: var(--bs-gray-100);
   grid-template-columns: 1fr;
   grid-template-rows: auto 1fr;
   overflow: hidden;
@@ -138,13 +138,16 @@ svg {
 }
 
 .product {
+  background: var(--bs-gray-100);
   grid-template-rows: 1fr auto;
   grid-template-areas: "media"
-  "info";  
+  "info";
 }
 
 .product-media {
   grid-area: media;
+  position: relative;
+  overflow: hidden;
   
   & > iframe {
     height: 100%;
@@ -155,6 +158,7 @@ svg {
     background: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 90%);
     content: "";
     position: absolute;
+    height: 100vh;
     width: 100vw;
     z-index: 1;
   }
@@ -162,6 +166,7 @@ svg {
 
 .product-info {
   grid-area: info;
+  z-index: 2;
 }
 
 // offcanvas
@@ -203,4 +208,28 @@ svg {
 .btn-main-menu {
   background: var(--bs-body-bg);
   background-image: none;
+}
+
+//  Media Queries
+
+@media (width > 360px) {
+  .main-menu {
+    border-radius: 2.5rem 0 0 0;
+  }
+} 
+
+@media (width > 768px) {  
+  .app-wrap {      
+    padding: 2.5rem;
+  }
+  .app {
+    border-radius: 1.25rem;
+    max-width: fit-content;
+  }
+}
+
+@media (height < 500px) {
+  .app {
+    min-height: 500px;
+  }
 }
